2010-07-28  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/tools/JarSigner.java: Add new verifyResult enum
	to track verification status.
	(verifyJars): Mark jar unverified only if it has no signature.
	(verifyJar): Use new verifyResult enum to return status based on if jar is
	unsigned, signed but with errors, or signed and ok.

2010-07-28  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java (getInstance):
	Collapse new loader paths into base loader.
	* netx/net/sourceforge/jnlp/services/ServiceUtil.java (checkAccess): Check
	if calling code is trusted all the way to the end. If it isn't, prompt
	user.

2010-07-28  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/resources/Messages.properties: Add new strings.
	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java (getInstance):
	Prompt user if the main app code is signed, but the extentions aren't.
	(initializeResources): Prompt user if there are any unsigned jars mixed
	with signed jars.
	* netx/net/sourceforge/jnlp/security/NotAllSignedWarningPane.java: New file.
	Dialog shown to user if the main app code is signed but the extentions aren't.
	* netx/net/sourceforge/jnlp/security/SecurityDialogUI.java
	(SecurityDialogUI): Add a constructor that doesn't take a CertVerifier
	object.
	* netx/net/sourceforge/jnlp/security/SecurityWarningDialog.java: Added
	dialog and accesstype enum elements for a 'Not all jars signed' case.
	(showNotAllSignedWarningDialog): New function. Prompts the user if the
	main app code is signed but the extentions aren't.
	(createDialog): Wire in the 'Not all jars signed' case.
	(updateUI): Same.
	* netx/net/sourceforge/jnlp/tools/JarSigner.java (allJarsSigned): New
	function. Returns if there are any unsigned jars.

2010-07-28  Deepak Bhole <dbhole@redhat.com>

	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java (getInstance):
	Collapse extention loaders into baseloader rather than vice-verse.
